examples/test/testpolicy12788.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12788
  namespace: namespace223
spec:
  podSelector:
    matchLabels:
      key43: value33
      key0: value4
      key47: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value1
      podSelector:
        matchLabels:
          key27: value29
          key3: value41
